--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,3 +599,97 @@ textarea {
 .closebtn:hover {
     color: black;
 }
+
+input[type=email],
+input[type=date],
+input[type=text],
+input[type=password],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    background-color: transparent;
+    color: grey;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+
+/* Clear floats after the columns */
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+
+@media screen and (max-width: 600px) {
+    .col-25,
+    .col-75,
+    input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+.newuser {
+    background-color: transparent;
+    border-radius: 5px;
+    color: grey;
+    padding: 12px;
+    border: 3px solid #6e6e6e;
+    cursor: pointer;
+}
+
+.newuser:hover {
+    background-color: #4a4a4a;
+    color: white;
+}
+
+button a {
+    text-decoration: none;
+    color: grey;
+}
+
+
+/* Here starts the css of the flex boxes */
