--- a/zhomepage/styles/Stylesh.scss
+++ b/zhomepage/styles/Stylesh.scss
@@ -372,3 +372,169 @@ ul {
 .services-holder {
     height: auto;
 }
+
+.con-map {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 800px) {
+    .con-map {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        padding: 10px;
+    }
+    iframe {
+        padding: 25px;
+    }
+    .exploresp {
+        font-size: larger;
+    }
+}
+
+.rows {
+    display: flex;
+}
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+.footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(113, 2, 2);
+    color: white;
+    text-align: center;
+}
+
+select {
+    width: 100%;
+    padding: 12px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 15%;
+    height: 30%;
+    overflow: auto;
+    background-color: rgb(44, 0, 0);
+    background-color: rgba(48, 0, 0, 0.4);
+    padding-top: 80px;
+    margin-top: 200px;
+    margin-left: 45%;
+}
+
+
+/* Modal Content/Box */
+
+.modal-content {
+    background-color: #7d0000;
+    margin: 5% auto 15% auto;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+
+/* Add Zoom Animation */
+
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+
+/* Change styles for span and cancel button on extra small screens */
+
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
+}
+
+.btns-container {
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.continueas {
+    color: #ffffff;
+    font-size: large;
+    font-weight: bolder;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+@media screen and (min-width:480px) {
+    .card-flex {
+        display: flex;
+    }
+    .column1 {
+        width: 100%;
+    }
+}
